# DCF

./: .gitignore  .pre-commit-config.yaml  Business idea.md  README.md  bitbucket-pipelines.yml  pyproject.toml  ruff.toml  run_license_check.sh
app/: README.md  argument_parser.py  config.py  custom_types.py  exceptions.py  main.py  main2.py
app/modeling/: data.py  dcf.py
app/services/: __init__.py  application_service.py  cache_service.py  dcf_service.py  error_handler.py  validation_service.py  visualization_service.py
app/visualization/: plot.py  printouts.py  visualize_dcf.py
extra/: commands
