[project]
name = "financial_forecasting"
version = "0.1.0"
description = "Financial foreceasting application"
requires-python = ">=3.8"
dependencies = [
    "yfinance",
    "bandit==1.7.1",
    "ruff==0.4.8",
    "liccheck==0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
