[project]
name = "financial_forecasting"
version = "0.1.0"
description = "Financial forecasting application using DCF modeling"
requires-python = ">=3.8"
dependencies = [
    "yfinance",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "ruff==0.4.8",
    "liccheck==0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "BLE",
    "A",
    "G",
    "C4",
    "Q",
    "ANN",
    "PIE",
    "PYI",
    "ARG",
    "PL",
    "TID",
    "ERA",
    "NPY",
    "RUF",
    "S",
]
ignore = [
    "G004",
    "Q000",
    "PLR2004",
    "PLW1510",
    "RUF013",
    "ERA001",
    "PLW2901",
    "PLR5501",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-args = 11

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app", "app.*"]

[tool.pytest.ini_options]
pythonpath = "."
